<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo_title" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/tempsignin_layout"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_above="@id/signin_layout"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="200dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <!-- EditText - Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_above="@id/signin_layout"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/email"
                android:text="test@aaa.com"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorBlack"
                android:textColor="@color/colorBlack"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- EditText - Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/password"
                android:text="1234"
                android:textColorHint="@color/colorBlack"
                android:textColor="@color/colorBlack"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/email_login_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/btn_email_login"
            android:text="@string/signin_email"
            android:textSize="16sp"
            android:theme="@style/ButtonStyle" />

        <Button
            android:id="@+id/non_login_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_non_login"
            android:text="@string/non_signin"
            android:textSize="16sp"
            android:theme="@style/ButtonStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <Button
                android:id="@+id/btn_find_password"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/signin_find_password"
                android:background="@color/colorTransparent"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/signin"
                android:background="@color/colorTransparent"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/signin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/Kakao_Login_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/btn_sign_in_kakao"
            android:drawableStart="@drawable/btn_logo_kakao"
            android:text="@string/signin_kakao"
            android:textSize="17sp"
            android:padding="3dp"
            android:textColor="@color/colorKakaoSignInText"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/google_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/btn_sign_in_google"
            android:drawableStart="@drawable/btn_logo_google"
            android:text="@string/signin_google"
            android:textSize="17sp"
            android:padding="5dp"
            android:textColor="@color/colorGoogleSignInText"
            android:textAllCaps="false"/>
    </LinearLayout>

</RelativeLayout>
