<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="90dp"
        android:textSize="55sp"
        android:textStyle="bold"
        android:gravity="center"
        android:fontFamily="@font/hakgyoansimbunpilr"
        android:text="@string/register" />


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/register_layout"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:layout_above="@id/agreed_terms_layout"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="311dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <!-- EditText - Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_above="@id/agreed_terms_layout"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- EditText - Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/password"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edittext"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_above="@id/agreed_terms_layout"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="name"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/agreed_terms_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/checked_agreed_terms_all"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:text="약관 전체 동의하기"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkBox_information"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:text="(필수)개인정보 수집 및 이용"
            android:textColor="@color/colorBlack"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/checkBox_event"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="20dp"
            android:text="(선택)이벤트 등 프로모션 알림 수신 동의"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/btn_email_login"
            android:text="@string/register"
            android:textSize="16sp"
            android:theme="@style/ButtonStyle" />

    </LinearLayout>


</RelativeLayout>